Fix compilation error, pick missing changes from main branch